--- a/SimonGame/SimonGame/MainPage.xaml
+++ b/SimonGame/SimonGame/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SimonGame.MainPage">
 
-    <StackLayout>
+    <StackLayout HorizontalOptions="Center">
         
         <Frame BackgroundColor="black" Padding="24" CornerRadius="0">
             <Label Text="SIMON" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
@@ -16,7 +16,7 @@
             Text="Play" 
         />
         
-        <Grid Margin="20,20,20,20">
+        <Grid>
             
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250"></ColumnDefinition>
