Remove corner radius from frame

--- a/SimonGame/SimonGame/MainPage.xaml
+++ b/SimonGame/SimonGame/MainPage.xaml
@@ -5,7 +5,7 @@
 
     <StackLayout HorizontalOptions="Center">
         
-        <Frame BackgroundColor="black" Padding="24" CornerRadius="0">
+        <Frame BackgroundColor="black" Padding="24">
             <Label Text="SIMON" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
         
