Ability to get to next round - buggy happy path

--- a/SimonGame/SimonGame/MainPage.xaml
+++ b/SimonGame/SimonGame/MainPage.xaml
@@ -117,7 +117,7 @@
             
         </Grid>
         <Label 
-            x:Name="roundLabel" 
+            x:Name="roundNumberLabel" 
             FontSize="36"
             HorizontalTextAlignment="Center" 
             TextColor="White" 
